jenkins/ingress-main.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: infrastructure
spec:
  ingressClassName: traefik
  rules:
    - host: jenkins.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-main
                port:
                  number: 8080
