jenkins/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ingressroute
  namespace: infrastructure
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`jenkins2.minikube.local`)
      services:
        - name: jenkins
          port: 8080
      # namespace: infrastructure
  tls: {}
